--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,31 @@
     "source.fixAll": "explicit"
   },
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#29f7c8",
+    "activityBar.background": "#29f7c8",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#d865f9",
+    "activityBarBadge.foreground": "#15202b",
+    "commandCenter.border": "#15202b99",
+    "editorGroup.border": "#29f7c8",
+    "panel.border": "#29f7c8",
+    "sash.hoverBorder": "#29f7c8",
+    "sideBar.border": "#29f7c8",
+    "statusBar.background": "#09e4b2",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#07b38c",
+    "statusBarItem.remoteBackground": "#09e4b2",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#09e4b2",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#09e4b299",
+    "titleBar.inactiveForeground": "#15202b99"
+  },
+  "peacock.color": "#09e4b2",
+  "files.associations": {
+    "*.css": "tailwindcss"
+  }
 }
