--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@catppuccin/daisyui": "^1.1.1",
     "@nightwatch/vue": "^3.1.1",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
@@ -31,14 +32,18 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "chromedriver": "^126.0.2",
+    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "geckodriver": "^4.4.1",
     "jsdom": "^24.1.0",
     "nightwatch": "^3.6.3",
     "npm-run-all2": "^6.2.0",
+    "postcss": "^8.4.41",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
