feat(login): implement login logic

--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.13.2",
+    "ky": "^1.6.0",
     "pinia": "^2.1.7",
+    "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@catppuccin/daisyui": "^1.1.1",
